Fixed textarea wrapping and scrolling. Behaves as expected now

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,6 +38,12 @@ body {
     clip-path: polygon(100% 0, 0 0, 0 100%);
 }
 
+#link {
+    overflow-y:auto;
+    resize: none;
+    height: 50px;
+}
+
 .grow {
     flex-grow: 2;
 }
